# noisy_intents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
examples/: evaluate_model.ipynb  generate_NoDA.ipynb  train_model.ipynb
noisy_intents/: __init__.py
noisy_intents/data/: __init__.py  dyda_da.py  noda.py
noisy_intents/eval/: __init__.py  metrics.py
noisy_intents/models/: __init__.py  bert.py  distilbert.py
noisy_intents/training/: __init__.py  train.py
