[tool.poetry]
name = "noisy_intents"
version = "0.1.0"
description = "A short description of the project"
authors = ["Dylan Sechet"]
license =  "MIT"
readme = "README.md"
packages = [{include = "noisy_intents"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tqdm = "^4.64.1"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
rich = "10.12.0"
torch = "^2.0.0"
torchaudio = "^2.0.1"
torchvision = "^0.15.1"
torchmetrics = "^0.11.4"
tensorboard = "^2.12.0"
torch-tb-profiler = "^0.4.1"
pyyaml = "^6.0"
tts = "^0.13.3"
datasets = "^2.11.0"
transformers = "^4.28.1"
librosa = "^0.10.0.post2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.17.1"
ruff = "^0.0.260"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
ignore-init-module-imports = true
line-length = 120